Change name to Wadoo

--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
-    <title>all-Islam</title>
-    <meta property="og:title" content="all-Islam" />
+    <title>Wadoo</title>
+    <meta property="og:title" content="Wadoo" />
     <meta property="og:description" content="Your AI companion for understanding Islam." />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="all-Islam" />
+    <meta name="twitter:title" content="Wadoo" />
     <meta name="twitter:description" content="Your AI companion for understanding Islam." />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
